--- a/wave-frontend-client/src/pages/LoginPage/loginpage.css
+++ b/wave-frontend-client/src/pages/LoginPage/loginpage.css
@@ -1,7 +1,6 @@
 .login-container{
     display: flex;
-    justify-content: space-around;
-    margin-top: 10%;
+    flex-direction: column;
 }
 
 button{
@@ -11,6 +10,31 @@ button{
 
 .inputfields-container{
     display: flex;
-    
-    gap: 5rem;
+    align-self: center;
+    flex-direction: column;
+}
+
+.log-into-ur-acc{
+    text-align: start;
+}
+
+.text-fields-div{
+   display: flex;
+   flex-direction: column;
+   gap: 1em;
+}
+
+.login-questions-div{
+    display: flex;
+    justify-content: space-between;
+}
+
+.login-button{
+    width: 400px;
+    height: 50px;
+    border-radius: 15px;
+}
+
+.login-button-div{
+    margin-top: 3em;
 }
