--- a/wave-frontend-client/src/pages/Register/registernewuser.css
+++ b/wave-frontend-client/src/pages/Register/registernewuser.css
@@ -1,30 +1,61 @@
 .main-container{
-    margin-top: 10%;
+    margin-top: 2em;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 
 .registeruser-inner-container{
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     width: 100vw;
+    height: auto;
 }
 
-.userName-field-container{
+
+.styx-saying-div{
     display: flex;
     flex-direction: column;
+    padding-left: 1em;
+    text-align: left;
 }
 
-.check-avail-button-div{
+.register-form-div{
     display: flex;
-    justify-content: flex-end;
-}
-
-.check-avail-button{
-    width: fit-content;
+    justify-content: space-between;
 }
 
 
+.at-one-place{
+    text-align: left;
+    margin-top: -2em;
+}
 
+
+.register-image{
+    height: 100%;
+    width: 100%;
+}
+
+.register-image-div{
+    height: 100%;
+    width: 50%;
+}
+
+.create-acc-outer-div{
+    width: 50%;
+    padding: 2em 2em 2em 2em;
+}
+
+.create-acc-inner-div{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.error-account-link-div{
+    display: flex;
+    justify-content: space-between;
+}
 
