--- a/wave-frontend-client/src/App.css
+++ b/wave-frontend-client/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
   margin: 0;
   padding: 0;
+  color: white;
+}
+
+p{
+  color: white;
+}
+
+body{
+  background-color: rgb(63, 63, 63);
 }
 
 .App-logo {
