--- a/wave-frontend-client/src/pages/LoginPage/loginpage.css
+++ b/wave-frontend-client/src/pages/LoginPage/loginpage.css
@@ -1,40 +1,48 @@
-.login-container{
-    display: flex;
-    flex-direction: column;
+.login-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 5em 1em 1em 1em;
 }
 
-button{
-    width: 100px;
-    height: 25px;
+button {
+  width: 100px;
+  height: 25px;
 }
 
-.inputfields-container{
-    display: flex;
-    align-self: center;
-    flex-direction: column;
+.inputfields-container {
+  display: flex;
 }
 
-.log-into-ur-acc{
-    text-align: start;
+.log-into-ur-acc {
+  width: 50%;
+  margin-top: 5%;
 }
 
-.text-fields-div{
-   display: flex;
-   flex-direction: column;
-   gap: 1em;
+.text-fields-div {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-.login-questions-div{
-    display: flex;
-    justify-content: space-between;
+.login-questions-div {
+  display: flex;
+  justify-content: space-between;
 }
 
-.login-button{
-    width: 400px;
-    height: 50px;
-    border-radius: 15px;
+.login-button {
+  height: 50px;
+  border-radius: 15px;
+  background-color: rgb(78, 143, 235);
 }
 
-.login-button-div{
-    margin-top: 3em;
+.login-button-div {
+  margin-top: 3em;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.login-account-form-div{
+    width: 50%;
+    padding: 2rem;
 }
