--- a/wave-frontend-client/src/pages/Register/registernewuser.css
+++ b/wave-frontend-client/src/pages/Register/registernewuser.css
@@ -39,13 +39,19 @@
 }
 
 .register-image-div{
+    margin-top: 10rem; 
     height: 100%;
     width: 50%;
 }
 
 .create-acc-outer-div{
     width: 50%;
+    display: flex;
+    flex-direction: column;
     padding: 2em 2em 2em 2em;
+    margin-top: 10rem;
+    height: 200px;
+    justify-content: space-between;
 }
 
 .create-acc-inner-div{
@@ -54,8 +60,19 @@
     gap: 1em;
 }
 
+
+
 .error-account-link-div{
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
 }
 
+.already-have-an-account-div{
+    text-align: right;
+}
+
+.next-button-div{
+    text-align: right;
+}
