--- a/wave-frontend-client/src/pages/SignUp/signup.css
+++ b/wave-frontend-client/src/pages/SignUp/signup.css
@@ -1,40 +1,14 @@
 .signup-main-container {
   display: flex;
-  justify-content: space-between;
-  margin: 1em 1em 1em 1em;
+  justify-content: center;
+  margin: 5em 1em 1em 1em;
 }
 
-.signup-saying-image-div {
-  display: flex;
-  flex-direction: column;
+.signup-image-div {
   width: 50%;
-  height: 100%;
-}
-.signup-styx-saying-div {
-  display: flex;
-  flex-direction: column;
-  padding-left: 1em;
-  text-align: left;
+  margin-top: 5%;
 }
 
-.signup-at-one-place {
-  text-align: left;
-  margin-top: -2em;
-}
-
-.signup-image-div {
-  display: flex;
-  flex-direction: column;
-}
-.signup-image {
-  height: 100%;
-  width: 100%;
-}
-
-.signup-image-div {
-  height: 100%;
-  width: 100%;
-}
 
 .signup-form-div {
   width: 50%;
@@ -51,4 +25,5 @@
     height: 50px;
     border-radius: 15px;
     font-size: 20px;
+    background-color: rgb(78, 143, 235);
 }
